// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeforeApplyingForSale display Before Applying when type is Habitat listing detail 1`] = `
<DocumentFragment>
  <li
    class="list-section custom-counter__item"
  >
    <header
      class="list-section__header custom-counter__header"
    >
      <hgroup>
        <h3
          class="custom-counter__title"
        >
          Before applying
        </h3>
        <span
          class="custom-counter__subtitle"
        >
          Make sure you:
        </span>
      </hgroup>
    </header>
    <ol
      class="numbered-list my-5 bg-white p-4 pt-6 text-xs"
    >
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <p>
          Go to a 
          <a
            href="http://www.habitatgsf.org/innes-ave"
            target="_blank"
          >
            Habitat for Humanity information session
          </a>
        </p>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        Haven't owned residential property in the past 3 years
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <p>
          Meet the 
          <a
            href="https://media.api.sf.gov/documents/DALP_Manual_-_2025.pdf"
            target="_blank"
          >
            income requirements
          </a>
        </p>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        Have a 650 credit score or higher
      </li>
    </ol>
    <div
      class="text-gray-750 primary-lighter-markup-link-desktop"
    >
      <p>
        Read 
        <a
          href="http://www.habitatgsf.org/innes-ave"
          target="_blank"
        >
          our full list of requirements
        </a>
         for more details.
      </p>
    </div>
  </li>
</DocumentFragment>
`;

exports[`BeforeApplyingForSale display Before Applying when type is directory 1`] = `
<DocumentFragment>
  <div
    class="mb-8"
  >
    <h2
      class="text__underline-weighted mb-5 text-gray-750"
    >
      Before applying
    </h2>
    <p
      class="text-gray-750"
    >
      Make sure you:
    </p>
    <ol
      class="numbered-list my-5"
    >
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        Haven't owned residential property in the past 3 years
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <span>
          Meet our 
          <a
            href="https://sf.gov/determine-if-you-can-buy-affordable-housing-program"
            target="_blank"
          >
            income requirements
          </a>
        </span>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <span>
          Complete 
          <a
            href="https://sf.gov/sign-complete-homebuyer-education"
            target="_blank"
          >
            homebuyer education
          </a>
        </span>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <span>
          Get pre-approved for a mortgage loan by a 
          <a
            href="https://sf.gov/reports/october-2023/find-lender-below-market-rate-program"
            target="_blank"
          >
            lender on our list
          </a>
        </span>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        Have enough in savings for closing costs and downpayment
      </li>
    </ol>
    <div
      class="text-gray-750 primary-lighter-markup-link-desktop"
    >
      <span>
        Read 
        <a
          href="https://sf.gov/determine-if-you-can-buy-affordable-housing-program"
          target="_blank"
        >
          our full list of requirements
        </a>
         for more details.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BeforeApplyingForSale display Before Applying when type is listing detail 1`] = `
<DocumentFragment>
  <li
    class="list-section custom-counter__item"
  >
    <header
      class="list-section__header custom-counter__header"
    >
      <hgroup>
        <h3
          class="custom-counter__title"
        >
          Before applying
        </h3>
        <span
          class="custom-counter__subtitle"
        >
          Make sure you:
        </span>
      </hgroup>
    </header>
    <ol
      class="numbered-list my-5 bg-white p-4 pt-6 text-xs"
    >
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        Haven't owned residential property in the past 3 years
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <span>
          Meet our 
          <a
            href="https://sf.gov/determine-if-you-can-buy-affordable-housing-program"
            target="_blank"
          >
            income requirements
          </a>
        </span>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <span>
          Complete 
          <a
            href="https://sf.gov/sign-complete-homebuyer-education"
            target="_blank"
          >
            homebuyer education
          </a>
        </span>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        <span>
          Get pre-approved for a mortgage loan by a 
          <a
            href="https://sf.gov/reports/october-2023/find-lender-below-market-rate-program"
            target="_blank"
          >
            lender on our list
          </a>
        </span>
      </li>
      <li
        class="text-gray-750 primary-lighter-markup-link"
      >
        Have enough in savings for closing costs and downpayment
      </li>
    </ol>
    <div
      class="text-gray-750 primary-lighter-markup-link-desktop"
    >
      <span>
        Read 
        <a
          href="https://sf.gov/determine-if-you-can-buy-affordable-housing-program"
          target="_blank"
        >
          our full list of requirements
        </a>
         for more details.
      </span>
    </div>
  </li>
</DocumentFragment>
`;
